--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <meta name='viewport' content='width=device-width, initial-scale=1.0'>
     <script src='./vue.js'></script>
-    <link rel="stylesheet" href="app.css">
+    <link rel="stylesheet" href="index.css">
     <!-- 引入jsList -->
     <script src="./questions/jsList.js"></script>
     <!-- 引入cssList -->
